# NLP_Final

./: .gitignore  README.md  config.json  create_dataset.py  glob  main.tex  pyproject.toml  run_pipeline.py  toy_inference.ipynb  translate_touche.py  translation_test.csv
data/: clean_translations.py
data/interim/: touche_es_checkpoint.csv
models/: transformers.py
notebooks/: toy_inference.ipynb
src/: inference_engine.py
src/data/: clean_parlamint.py  create_dataset.py  data_utils.py  extract_parlamint.py  translate_touche.py
src/features/: build_features_roberta.py
src/models/: inference_engine.py  inference_parlamint.py  train_roberta.py
src/visualization/: advanced_analytics.py  inference_engine.py
