[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "tqdm>=4.67.3",
    "torch>=2.8.0",
    "transformers>=5.1.0",
    "bitsandbytes>=0.48.0",
    "accelerate>=1.10.0",
    "scikit-learn>=1.7.0",
]
